se agrega proyecto

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -991,6 +991,9 @@ main{
 @media only screen and (max-width: 480px){
     .pasos_freir p{
         font-size: 1.4rem !important ;
+    .main .globo_texto input{
+    margin-left: 3px;
+    }
     } 
 
 }
