--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -3,7 +3,7 @@
     width: 100%;
 
     nav{
-        background-color: $color1 !important;
+        background-color: $color1 !important ;
         width: 100%;
         display: flex;
         justify-content: space-around;
@@ -21,7 +21,7 @@
             }
         }
         ul li a{
-            text-decoration: none !important;
+            text-decoration: none ;
             color:rgb(255, 255, 255);
             margin: 10px;
             padding: 2px 10px 2px 10px;
@@ -31,13 +31,10 @@
             font-style: italic;
             &:hover{
                 color: black;
-                }
-                &:hover{
-                    background-color: white;
-                    border-radius: 15px;
-                        }
-                    }
+                background-color: white;
+                border-radius: 15px;
                 }
             }
-        
+        }    
+    }    
     
