--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -24,29 +24,47 @@ main{
                 padding-right: 20px;
                 color: $color1;
                 text-decoration: none;
-                text-shadow:1px 1px 2px rgb(94, 94, 94) ;
+                text-shadow:1px 3px 4px rgb(48, 48, 48) ;
             }
-            button{
-                font-size: 1em;
-                background: none;
-                padding: 10px;
-                border: solid $color1 1px;
-                margin-top: 20px;
-                border-radius: 15px;
-                color: white;
-                text-decoration: none;
-                cursor: pointer;
-                a{
-                color: white;
-                text-decoration: none;
-                text-shadow:1px 1px 2px rgb(94, 94, 94) ;
-                &:hover{
-                    font-weight: bold;
-                }
-                }
-            } 
         } 
     } 
+    .botones-fijos{
+        .wp_fijo a{
+            font-size: 2.5rem;
+            background-color: rgb(13, 148, 31);
+            padding: 0px 10px 2px 10px ;
+            border: rgb(255, 255, 255) solid 2px;
+            color: white;
+            border-radius: 50px;
+            bottom: 120px;
+            right: 20px;
+            display: inline-block;
+            cursor: pointer;
+            position: fixed;
+            text-shadow: 2px 2px 2px rgb(102, 102, 102);
+            i{
+                &:hover{
+                    color:  rgb(255, 255, 255);
+                    transform: rotate(360deg);
+                    transition: 2s;
+                }
+            }
+            
+        }
+        .subir i{
+            font-size: 2.5rem;
+            padding: 8px 10px;;
+            border: rgb(255, 255, 255) solid 2px;
+            color: rgb(255, 255, 255);
+            border-radius: 40px;
+            bottom: 30px;
+            right: 20px;
+            display: inline-block;
+            cursor: pointer;
+            position: fixed;
+            text-shadow: 1px 2px 4px rgb(92, 92, 92);
+        }
+    }
     .productos_home{
         background-color: black;
         width: 100%;
@@ -85,8 +103,9 @@ main{
     .carrusel_home{
         display: flex;
         justify-content: center;
-        background-image: url(../image/ladrillos.jpg);
-        padding-top: 70px;
+        /* background-image: url(../image/ladrillos.jpg); */
+        background-color: black;
+        /* padding-top: 70px; */
         padding-bottom: 70px;
         .slide{
             width: 80%;
@@ -94,19 +113,23 @@ main{
                 background-size: cover;
                 width: 100%;
                 height: 800px;
+                border-radius: 30px;
             }
         }
     }
     /* jumbotrons home */
     .info-main{
         padding: 30px;
-        background-color: black;
+        /* background-color: black; */
+        background-image: url(../image/ladrillos.jpg);
         .envio-pago .jumbotron{
             margin: 30px 0px 30px 0px;
             padding: 0px;
             text-align: center;
             border-radius: 0px;
             transition: all 0.3s;
+            box-shadow: 3px 5px 10px black;
+            border-radius: 30px;
             &:hover{
                 transform: scale(1.01,1.01);
             }
@@ -120,6 +143,7 @@ main{
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            border-radius: 30px;
             }
             .foto-pago{
             background-image:linear-gradient(rgba(16, 16, 16, .3), rgba(16, 16, 16, .8)) ,url(https://img.freepik.com/foto-gratis/liquidacion-tarjeta-credito-pos-lugar-compras-efectivo_1359-1162.jpg?w=1380);
@@ -131,6 +155,7 @@ main{
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            border-radius: 30px;
             }
             i{
                 font-size: 100px;
@@ -157,19 +182,20 @@ main{
     .carrusel_productos{
         display: flex;
         justify-content: center;
-        background-image: url(../image/ladrillos.jpg);
+        background-image: url(../image/ladrillos.jpg); 
         padding: 30px;
         .slide{
             width: 80%;
             img{
                 width: 100%;
                 height: 710px;
+                border-radius: 30px;
             }
             h3{
                 font-weight: 900;
                 font-size: 4rem;
                 font-style: italic;
-                color: $color1;
+                color: white;
             }
         }
     }
@@ -189,30 +215,50 @@ main{
         width: 100%;
         .producto{
             width: 70%;
-            padding: 20px 10px 20px 20px;
+            padding: 20px 10px 20px 10px;
             .jumbotron1{
                 height: 600px;
                 background-image: url(../image/cheddar.jpg);
                 background-size: cover;
                 background-position: center;
+                transform: all 0.5s;
+                border-radius: 30px;
+                &:hover{
+                    transform: scale(1.01,1.01);
+                }
             }
             .jumbotron2{
                 height: 600px;
                 background-image: url(../image/baston-prod.jpg);
                 background-size: cover;
                 background-position: center;
+                transform: all 0.5s;
+                border-radius: 30px;
+                &:hover{
+                    transform: scale(1.01,1.01);
+                }
             }
             .jumbotron3{
                 height: 600px;
                 background-image: url(../image/bolitas-prod.jpg);
                 background-size: cover;
                 background-position: center;
+                transform: all 0.5s;
+                border-radius: 30px;
+                &:hover{
+                    transform: scale(1.01,1.01);
+                }
             }
             .jumbotron4{
                 height: 600px;
                 background-image: url(../image/bastoncito-prod.jpg);
                 background-size: cover;
                 background-position: center;
+                border-radius: 30px;
+                transform: all 0.5s;
+                &:hover{
+                    transform: scale(1.01,1.01);
+                }
             }
             .texto{
                 h2{
@@ -290,6 +336,11 @@ main{
                 background-color: black;
                 width: 70%;    
                 margin: 0px ;
+                border-radius: 30px;
+                justify-content: center;
+                display: flex;
+                align-items: center;
+                flex-direction: column;
                 box-shadow: 1px 4px 6px 7px rgb(150, 150, 150);
                 &:hover{
                     transform: scale(1.01,1.01);
@@ -369,7 +420,7 @@ main{
             .pasos{
                 background-color: rgb(0, 0, 0);
                 box-shadow: 1px 4px 6px 7px rgb(150, 150, 150);
-                border-radius: 10px;
+                border-radius: 30px;
                 margin-bottom: 100px;
                 padding: 20px;
                 &:hover{
@@ -471,7 +522,10 @@ main{
     .globo_texto{
         .nombre_apellido{
             background-color: black;
-            padding:  30px 0px 30px 60px;
+            padding:  40px;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
             h2{
                 color: $color1;
                 font-weight: 900;
@@ -491,51 +545,65 @@ main{
             }
     
         }
-        .mail{
+        .globo2{
             display: flex;
-            flex-direction: column;
-            margin-bottom: 20px;
-            margin-left: 70px;
+            padding: 40px;
+            
+            .mail{
+                display: flex;
+                flex-direction: column;
+                margin-bottom: 20px;
+                
+            }
+            .areatexto{
+                width: 700px;
+                font-size: 1rem;
+                border: 0px 1px;
+                border-radius: 20px;
+                padding: 10px;
+            }
+            h2{
+               font-size: 4rem; 
+               font-weight: 900;
+               font-style: italic;
+            }
+            h4{
+                font-weight: bold;
+                font-style: italic;
+                
+            }
+            input{
+                background-color: $color1;
+                cursor: pointer;
+                border: 0px solid black;
+                border-radius: 10px;
+                padding: 10px;
+                margin-right: 5px;
+                &:hover{
+                    transform: scale(1.1,1.1);
+                }
+                
+            }
+            .mail_wp{
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                padding-top: 120px;
+                i{
+                    font-weight: bold;
+                    color: $color1;
+                    font-family: 'Monsterrat' sans-serif;
+                }
+                h3{
+                    font-style: italic;
+                    font-weight: bold;
+                    padding-bottom: 10px;
+                    margin-top: 20px;
+                }
+            }
+
         }
-        h4{
-            font-weight: bold;
-            font-style: italic;
-            margin-left: 70px ;
-        }
-        h2{
-            font-style: italic;
-            font-weight: 900;
-            padding-bottom: 10px;
-            margin-left: 70px ;
-            margin-top: 20px;
-        }
-        textarea{
-            font-size: 1rem;
-            border: 0px 1px;
-            border-radius: 20px;
-            padding: 10px;
-            margin-left: 70px ;
-        }
-        input{
-            background-color: $color1;
-            cursor: pointer;
-            border: 0.5px solid black;
-            border-radius: 10px;
-            padding: 10px;
-            margin-left: 70px ;
-        }
-    }
-    .mail_wp{
-        margin-left: 40px ;
-        h2{
-            padding: 30px 60px 30px 30px;
-            font-weight: 900;
-            font-style: italic;
-        }
-        span{
-            color: $color1;
-            font-weight: bold;
-        }
+        
     }
 }
 
@@ -553,6 +621,12 @@ main{
     }
     .main .pasos_freir p{
         font-size: 2rem;
+    }
+    .main .globo_texto .globo2 .areatexto{
+        width: 400px;
+    }
+    .main .globo_texto .globo2 .mail_wp h3{
+        font-size: 1.2rem;
     }
 }
 /* carrusel home */
@@ -580,6 +654,12 @@ main{
     .main .carrusel_productos .slide img{
         height: 440px;
     }
+    .main .globo_texto .globo2{
+        flex-direction: column;
+    }
+    .main .globo_texto .globo2 .mail_wp{
+        padding-top: 30px;
+    }
 }
 
 @media only screen and (max-width: 1150px){
@@ -591,6 +671,12 @@ main{
     }
     .main .fondo_comprar .pasos_comprar{
         padding: 100px 200px 100px 200px;
+    }
+    main .botones-fijos .wp_fijo a{
+        bottom: 220px;
+    }
+    main .botones-fijos .subir i{
+        bottom: 150px;
     }
 }
 @media only screen and (max-width: 900px){
@@ -629,6 +715,9 @@ main{
     }
     .main .fondo_comprar .pasos_comprar{
         padding: 50px 100px 50px 100px;
+    }
+    .main .productos .producto{
+        width: 90%;
     }
 }
 @media only screen and (max-width: 630px){
@@ -691,6 +780,7 @@ main{
         }
         .main .globo_texto h2{
             margin-left: 20px;
+            font-size: 1.6rem;
         }
          .main .globo_texto label{
             margin-left: 50px;
@@ -701,18 +791,6 @@ main{
         }
         .main .globo_texto{
             margin-left: 0px ;
-        }
-        .main .globo_texto h4{
-            margin-left: -20px;
-        }
-        .main .globo_texto .mail{
-            margin-left: -20px;
-        }
-        .main .globo_texto textarea{
-            margin-left: -20px;
-        }
-        .main .globo_texto input{
-            margin-left: 30px;
         }
     }
 }
@@ -733,6 +811,7 @@ main{
     }
     .main .carrusel_productos .slide img{
         height: 180px;
+        padding: 10px;
     }
     .main .carrusel_productos .slide h3{
         font-size: 1rem;
@@ -755,8 +834,12 @@ main{
     .main .nosotros p{
         font-size: 1rem;
     }
-    .mail_wp h2{
-        font-size: 1.6rem ;
+    .main .globo_texto .globo2 h2{
+        font-size: 2rem;
+        margin-left: 0px;
+    }
+    .main .globo_texto .globo2 .areatexto{
+        width: 250px;
     }
 }
 @media only screen and (max-width: 420px){
@@ -788,7 +871,7 @@ main{
         font-size: 1.3rem;
     }
     .main .coccion .coccion-container .jumbotron {
-        height: 410px;
+        height: 450px;
     }
     .main .como_comprar h2{
         font-size: 2rem;
@@ -799,7 +882,7 @@ main{
     .main .globo_texto .nombre_apellido h2{
         font-size: 2rem;
     }
+    .main .globo_texto .globo2 .mail_wp h3{
+        font-size: 1rem;
+    }
 }
-
-
-
